$Id$

== MDAnalysis CHANGELOG ==

The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
??/??/09 orbeckst, denniej0 
        (Running list of enhancements, to be edited for final
        entry when stable changes are merged back into trunk)

        * reads hydrogen bond donor/acceptor list from psf and sets up
          structures for hydrogen bonding analysis
          TODO: H-BOND ANALYSIS NOT WORKING YET
        * added KDTree and Neighbour searching code from Biopython for
          faster distance selections: used for AROUND selections;
	  POINT is using distance matrix by default as this is
	  faster. This can be configured with core.flags
	* core.flags infrastructure to tweak behaviour at run time
        * updated LICENSE file with Biopython License
        * completely reorganized directory structure to make
          enhancements easier to incorporate
        * can write single frames as pdb or crd (AtomGroup gained the
          write() method)

08/23/08 naveen, orbeckst
        * 0.5.1 release
	* primitive PDB writer (only works if coordinates were read from a pdb)
        * B-factor property (detailed implementation subject to change)
        * periodic flag for PointSelection
	* new correl series: orientation vector for 3-site molecules
	  (to calculate the water dipole moment of SPC or TIP3P)
	* distance.distance_array() bug fixed (see doc string)
        * updated LICENSE file UIUC Open Source License

01/29/08 orbeckst
	* prepared 0.5.0 release. Includes previously disabled
	  distance code, PDB reader, incomplete XTC reader (code by
	  Benjamin Hall), and marginally updated documentation &
	  licenses

11/12/07 naveen
        * prepared for release outside lab
